...
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin">

            <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/item_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
...
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/blink_button"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/blink"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="10sp"
...
                        android:textSize="10sp"
                        android:backgroundTint="@color/custom_button_color_state_list"
                        style="Widget.AppCompat.Button.Colored"/>
            </LinearLayout>

            <com.larswerkman.holocolorpicker.ColorPicker
                    android:id="@+id/picker"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_toEndOf="@id/left_buttons"
                    android:layout_toStartOf="@+id/right_buttons"/>

...
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:gravity="center_horizontal">

                    <cn.carbswang.android.numberpickerview.library.NumberPickerView
                            android:id="@+id/duration_picker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:npv_ShowCount="3"
                            app:npv_TextSizeNormal="16sp"
                            app:npv_TextSizeSelected="20sp"
                            app:npv_TextColorHint="@color/colorAccent"
...
                            android:textSize="12sp"
                            android:text="@string/picker_caption_duration"/>
                </LinearLayout>
            </LinearLayout>

            <aquilina.ryan.homelightingapp.ui.design_mode.EffectsTimelineView
                    android:id="@+id/effects_timeline"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="40"
                    app:lineColor="@color/colorAccent"
                    app:startColor="@color/colorPrimary"/>

...
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:gravity="center_horizontal">

                    <cn.carbswang.android.numberpickerview.library.NumberPickerView
                            android:id="@+id/repetitions_picker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:npv_ShowCount="3"
                            app:npv_TextSizeNormal="16sp"
                            app:npv_TextSizeSelected="20sp"
                            app:npv_TextColorHint="@color/colorAccent"
...
                            android:text="@string/picker_caption_repetitions"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/preview_preset_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preview_preset_button"
                android:textColor="@color/colorPrimaryText"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
...
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:alpha="0.3"
                android:visibility="gone"/>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/save_preset_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_preset_button"
                android:textColor="@color/colorPrimaryText"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
...
