<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/parentPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="9dip"
        android:paddingBottom="3dip"
        android:paddingStart="3dip"
        android:paddingEnd="1dip"
        android:background="@color/colorPrimary">

    <LinearLayout
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="54dip"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

        <LinearLayout
                android:id="@+id/title_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="6dip"
                android:layout_marginBottom="9dip"
                android:layout_marginStart="16dip"
                android:layout_marginEnd="10dip">

            <TextView
                    android:id="@+id/alertTitle"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorPrimaryText"
                    android:textAlignment="viewStart"
                    android:foregroundGravity="center_vertical"
                    android:text="Save Preset"
                    android:fontFamily="@font/montserrat_regular"/>
        </LinearLayout>
        <!-- If the client uses a customTitle, it will be added here. -->
    </LinearLayout>

    <LinearLayout
            android:id="@+id/contentPanel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

        <EditText
                android:id="@+id/dialog_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:inputType="textCapSentences"
                android:textSize="16sp"
                android:layout_marginStart="16dip"
                android:layout_marginEnd="16dip"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryText"
                android:hint="@string/dialog_edit_text_hint"
                style="@style/MyEditTextTheme"
                android:fontFamily="@font/montserrat_light"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/buttonPanel"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:minHeight="54dip"
                  android:orientation="vertical" >
        <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dip"
                android:paddingStart="2dip"
                android:paddingEnd="2dip"
                android:measureWithLargestChild="true">
            <LinearLayout android:id="@+id/leftSpacer"
                          android:layout_weight="0.25"
                          android:layout_width="0dip"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:visibility="gone" />
            <Button android:id="@+id/button1"
                    android:layout_width="0dip"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:maxLines="2"
                    android:layout_height="wrap_content" />
            <Button android:id="@+id/button3"
                    android:layout_width="0dip"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:maxLines="2"
                    android:layout_height="wrap_content" />
            <Button android:id="@+id/button2"
                    android:layout_width="0dip"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:maxLines="2"
                    android:layout_height="wrap_content" />
            <LinearLayout android:id="@+id/rightSpacer"
                          android:layout_width="0dip"
                          android:layout_weight="0.25"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>